--- a/travel/style.css
+++ b/travel/style.css
@@ -42,10 +42,12 @@
 .header {
   width: 100%;
   height: 100%;
+  position: relative;
   background-color: rgba(242, 120, 92, 0.7);
   background-size: cover;
   -webkit-box-shadow: 0 4px 4px rgb(13, 96, 111);
           box-shadow: 0 4px 4px rgb(13, 96, 111);
+  z-index: 1;
 }
 
 .header__wrapper {
