--- a/travel/style.css
+++ b/travel/style.css
@@ -37,6 +37,7 @@
 .body {
   width: 100%;
   height: 100%;
+  margin: 0;
 }
 
 .header {
@@ -165,6 +166,8 @@
 
 .main {
   position: relative;
+  max-width: 1440px;
+  margin: 0 auto;
 }
 
 .preview {
@@ -374,4 +377,108 @@
   font-size: 1.5rem;
   line-height: 2rem;
   letter-spacing: 0.8px;
+}
+
+.steps {
+  position: relative;
+  top: -10px;
+  margin: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.steps__container {
+  width: 81.7%;
+  height: auto;
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.steps__title {
+  padding-bottom: 1em;
+}
+
+.title {
+  font-family: "Red-Hat-Text";
+  font-size: 2.5rem;
+  line-height: 53px;
+  color: #F2785C;
+}
+
+.steps__block {
+  width: 100%;
+}
+
+.frame {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.frame__1,
+.frame__2,
+.frame__3 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 154px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.frame__icon {
+  width: 100px;
+  height: 100px;
+  background-color: #F2785C;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  border-radius: 1rem;
+  -webkit-border-radius: 1rem;
+  -moz-border-radius: 1rem;
+  -ms-border-radius: 1rem;
+  -o-border-radius: 1rem;
+}
+.frame__icon .logo__vector {
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+}
+
+.frame__text {
+  font-family: "Aleo";
+  font-size: 1.25rem;
+  line-height: 1.5rem;
+  color: #0D606F;
+}
+
+.frame__2 {
+  margin-left: 4.3em;
 }
