--- a/travel/style.css
+++ b/travel/style.css
@@ -41,16 +41,21 @@
 }
 
 .header {
-  width: 1440px;
-  height: 100%;
   position: relative;
-  margin: 0 auto;
-  padding: 25px 120px 24px 120px;
+  width: 100%;
+  height: 100%;
   background-color: rgba(242, 120, 92, 0.7);
   background-size: cover;
   -webkit-box-shadow: 0 4px 4px rgb(13, 96, 111);
           box-shadow: 0 4px 4px rgb(13, 96, 111);
   z-index: 1;
+}
+
+.header__wrapper {
+  width: 1440px;
+  height: 100%;
+  margin: 0 auto;
+  padding: 25px 120px 24px 120px;
 }
 
 .header__container {
