--- a/travel/style.css
+++ b/travel/style.css
@@ -682,3 +682,59 @@
 .stories__btn {
   margin: 40px auto 0 auto;
 }
+
+.footer {
+  background: url(/travel/travel/assets/img/footer-desktop.jpg);
+  background-size: cover;
+  background-position: 0 -1269px;
+  background-repeat: no-repeat;
+}
+
+.footer__wrapper {
+  max-width: 1440px;
+  height: 100%;
+  margin: 0 auto;
+  padding: 14px 123px 13px 0;
+}
+
+.footer__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.footer__text {
+  font-family: "Red-Hat-Text";
+  font-size: 1rem;
+  line-height: 21px;
+  color: #FFFFFF;
+  margin-left: 33.1%;
+  cursor: default;
+}
+
+.links {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 141px;
+  margin-left: auto;
+  list-style: none;
+}
+
+.link__vector:hover,
+.links__item:hover {
+  transform: scale(1.1);
+  -webkit-transform: scale(1.1);
+  -moz-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  -o-transform: scale(1.1);
+}
