--- a/travel/style.css
+++ b/travel/style.css
@@ -494,6 +494,7 @@
   width: 1440px;
   height: 100%;
   margin: 0 auto;
+  padding-bottom: 10px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -618,7 +619,7 @@
 }
 
 .stories {
-  padding-top: 80px;
+  padding-top: 70px;
 }
 
 .stories__wrapper {
