--- a/travel/style.css
+++ b/travel/style.css
@@ -118,6 +118,7 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  list-style: none;
 }
 .nav .nav__link {
   font-family: "Red-Hat-Text";
