--- a/travel/style.css
+++ b/travel/style.css
@@ -148,10 +148,30 @@
   -webkit-box-shadow: 0 2px 3px rgba(13, 96, 111, 0.16);
           box-shadow: 0 2px 3px rgba(13, 96, 111, 0.16);
   cursor: pointer;
+  transition: all 0.3s ease-in-out;
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -ms-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
 }
 .btn:hover {
-  -webkit-box-shadow: 4px 4px 3px rgba(19, 136, 156, 0.8);
-          box-shadow: 4px 4px 3px rgba(19, 136, 156, 0.8);
+  background-color: rgba(19, 136, 156, 0.6);
+  -webkit-box-shadow: 4px 4px 3px rgba(19, 136, 156, 0.9);
+          box-shadow: 4px 4px 3px rgba(19, 136, 156, 0.9);
+  color: rgba(0, 0, 0, 0.7);
+  transition: all 0.3s ease-in-out;
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -ms-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+}
+.btn:hover .btn__vector {
+  fill: rgba(0, 0, 0, 0.7);
+  transition: all 0.3s ease-in-out;
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -ms-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
 }
 .btn:active {
   transform: translate(4px, 4px);
@@ -227,7 +247,7 @@
   font-family: "Aleo";
   font-size: 1.5rem;
   line-height: 29px;
-  color: #F2785C;
+  color: rgb(242, 120, 92);
   letter-spacing: -0.6px;
   transform: scale(1);
   -webkit-transform: scale(1);
@@ -244,7 +264,7 @@
   font-family: "Aleo";
   font-size: 1.5rem;
   line-height: 29px;
-  color: #F2785C;
+  color: rgb(242, 120, 92);
   letter-spacing: -0.6px;
   transform: scale(1);
   -webkit-transform: scale(1);
@@ -261,7 +281,7 @@
   font-family: "Aleo";
   font-size: 1.5rem;
   line-height: 29px;
-  color: #F2785C;
+  color: rgb(242, 120, 92);
   letter-spacing: -0.6px;
   transform: scale(1);
   -webkit-transform: scale(1);
@@ -278,7 +298,7 @@
   font-family: "Aleo";
   font-size: 1.5rem;
   line-height: 29px;
-  color: #F2785C;
+  color: rgb(242, 120, 92);
   letter-spacing: -0.6px;
   transform: scale(1);
   -webkit-transform: scale(1);
@@ -295,7 +315,7 @@
   font-family: "Aleo";
   font-size: 1.5rem;
   line-height: 29px;
-  color: #F2785C;
+  color: rgb(242, 120, 92);
   letter-spacing: -0.6px;
   transform: scale(1);
   -webkit-transform: scale(1);
@@ -416,7 +436,7 @@
   font-family: "Red-Hat-Text";
   font-size: 2.5rem;
   line-height: 53px;
-  color: #F2785C;
+  color: rgb(242, 120, 92);
 }
 
 .steps__block {
@@ -454,7 +474,7 @@
 .frame__icon {
   width: 100px;
   height: 100px;
-  background-color: #F2785C;
+  background-color: rgb(242, 120, 92);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -588,10 +608,10 @@
   -o-border-radius: 50%;
 }
 .scroll__btn:nth-child(2) {
-  background-color: #F2785C;
+  background-color: rgb(242, 120, 92);
 }
 .scroll__btn:hover {
-  border: 2px solid #F2785C;
+  border: 2px solid rgb(242, 120, 92);
 }
 
 .destinations__btn,
@@ -617,6 +637,12 @@
 
 .btn__vector {
   text-align: center;
+  fill: #FFFFFF;
+  transition: all 0.3s ease-in-out;
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -ms-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
 }
 
 .stories {
