fix: change font-style of the placeholder

--- a/travel/style.css
+++ b/travel/style.css
@@ -248,6 +248,7 @@
   font-size: 1.5rem;
   line-height: 29px;
   color: #f2785c;
+  font-style: italic;
   letter-spacing: -0.6px;
   transform: scale(1);
   -webkit-transform: scale(1);
@@ -265,6 +266,7 @@
   font-size: 1.5rem;
   line-height: 29px;
   color: #f2785c;
+  font-style: italic;
   letter-spacing: -0.6px;
   transform: scale(1);
   -webkit-transform: scale(1);
@@ -282,6 +284,7 @@
   font-size: 1.5rem;
   line-height: 29px;
   color: #f2785c;
+  font-style: italic;
   letter-spacing: -0.6px;
   transform: scale(1);
   -webkit-transform: scale(1);
@@ -299,6 +302,7 @@
   font-size: 1.5rem;
   line-height: 29px;
   color: #f2785c;
+  font-style: italic;
   letter-spacing: -0.6px;
   transform: scale(1);
   -webkit-transform: scale(1);
@@ -316,6 +320,7 @@
   font-size: 1.5rem;
   line-height: 29px;
   color: #f2785c;
+  font-style: italic;
   letter-spacing: -0.6px;
   transform: scale(1);
   -webkit-transform: scale(1);
